--- a/test.html
+++ b/test.html
@@ -14,13 +14,13 @@
     <script type="text/javascript">
       var obj = document.getElementById('href');
       obj.onclick=function(){
-		window.location.href="https://www.baidu.com";
+		window.location.href="https://itunes.apple.com/cn/app/id1192637343?mt=8";
 	  }
 
 	  var obj = document.getElementById('assign');
       obj.onclick=function(){
 		// window.location.assign("https://www.baidu.com");
-		window.location="https://www.baidu.com";
+		window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
 	  }
     </script>
 </body>
