--- a/test.html
+++ b/test.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Examples</title>
+<title>测试代码</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="" rel="stylesheet">
 </head>
 <body>
