--- a/test.html
+++ b/test.html
@@ -10,8 +10,8 @@
 <link href="" rel="stylesheet">
 </head>
 <body>
-    <button id="href">href</button>
-    <button id="assign">assign</button>
+    <!--<button id="href">href</button>-->
+    <button id="assign">点击</button>
     <script type="text/javascript">
       var obj = document.getElementById('href');
       obj.onclick=function(){
