--- a/test.html
+++ b/test.html
@@ -20,8 +20,8 @@
 
 	  var obj = document.getElementById('assign');
       obj.onclick=function(){
-		// window.location.assign("https://www.baidu.com");
-		window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
+		 window.location.assign("https://www.baidu.com");
+		//window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
 	  }
     </script>
 </body>
