--- a/test.html
+++ b/test.html
@@ -11,17 +11,18 @@
 </head>
 <body>
     <!--<button id="href">href</button>-->
-    <button id="assign">点击</button>
-    <script type="text/javascript">
+    
+    <!-- <script type="text/javascript">
       var obj = document.getElementById('href');
       obj.onclick=function(){
-		window.location.href="https://itunes.apple.com/cn/app/id1192637343?mt=8";
-	  }
+          window.location.href="https://itunes.apple.com/cn/app/id1192637343?mt=8";
+        } -->
 
+    <button id="assign">点击</button>
 	  var obj = document.getElementById('assign');
       obj.onclick=function(){
-		 window.location.assign("https://www.baidu.com");
-		//window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
+		  //window.location.assign("https://www.baidu.com");
+		  window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
 	  }
     </script>
 </body>
