--- a/test.html
+++ b/test.html
@@ -16,9 +16,12 @@
       var obj = document.getElementById('href');
       obj.onclick=function(){
           window.location.href="https://itunes.apple.com/cn/app/id1192637343?mt=8";
-        } -->
+        } 
+      </script>-->
 
+    
     <button id="assign">点击</button>
+    <script type="text/javascript">
 	  var obj = document.getElementById('assign');
       obj.onclick=function(){
 		  //window.location.assign("https://www.baidu.com");
