--- a/test.html
+++ b/test.html
@@ -12,12 +12,12 @@
 <body>
     <!--<button id="href">href</button>-->
     
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       var obj = document.getElementById('href');
       obj.onclick=function(){
-          window.location.href="https://itunes.apple.com/cn/app/id1192637343?mt=8";
+          window.location.href="http://files.fbb360.com/fbb.apk";
         } 
-      </script>-->
+    </script>
 
     
     <button id="assign">点击</button>
