--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 <link href="" rel="stylesheet">
 </head>
 <body>
-    <!--<button id="href">href</button>-->
+    <button id="href">href</button>
     
     <script type="text/javascript">
       var obj = document.getElementById('href');
