--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var obj = document.getElementById('href');
       obj.onclick=function(){
-          window.location.href="http://files.fbb360.com/fbb.apk";
+          window.location="http://files.fbb360.com/fbb.apk";
         } 
     </script>
 
