--- a/downLoadAPP.html
+++ b/downLoadAPP.html
@@ -67,11 +67,11 @@
 	</style>
 </head>
 <body>
-	<img class="title" src="assets/img/dlLogo.jpg" alt="房帮帮">
+	<img class="title" src="img/dlLogo.jpg" alt="房帮帮">
 	<div class="main">
-		<img class="start-main1" src="assets/img/start-main1.jpg" alt="展示图片">
-		<img class="start-main2" src="assets/img/start-main2.jpg" alt="展示图片">
-		<img class="start-main3" src="assets/img/start-main3.jpg" alt="展示图片">
+		<img class="start-main1" src="img/start-main1.jpg" alt="展示图片">
+		<img class="start-main2" src="img/start-main2.jpg" alt="展示图片">
+		<img class="start-main3" src="img/start-main3.jpg" alt="展示图片">
 	</div>	
 	<div class="dlline" ng-app="downLoad" ng-controller="downLoadCtr">
 		<button id="download" ng-click="downLoad()">立即下载</button>
