--- a/1111.html
+++ b/1111.html
@@ -18,6 +18,7 @@
           window.location="http://files.fbb360.com/fbb.apk";
         }
         var a=0;
+        var b=0;
     </script>
 </body>
 </html>
