--- a/1111.html
+++ b/1111.html
@@ -16,8 +16,17 @@
       var obj = document.getElementById('href');
       obj.onclick=function(){
           window.location="http://files.fbb360.com/fbb.apk";
-        }
-        var a=0;
+        } 
+    </script>
+
+    
+    <button id="assign">点击</button>
+    <script type="text/javascript">
+	  var obj = document.getElementById('assign');
+      obj.onclick=function(){
+		  //window.location.assign("https://www.baidu.com");
+		  window.location="https://itunes.apple.com/cn/app/id1192637343?mt=8";
+	  }
     </script>
 </body>
 </html>
